@@ -444,7 +444,7 @@
         <param name="gc">a <see cref="T:Gdk.GC" /></param>
         <param name="filled">a <see cref="T:System.Int32" /></param>
         <param name="points">a <see cref="T:Gdk.Point[]" /></param>
-        <remarks>This method is obsolete.  Use the overload which takes a <see cref="T:System.Boolean" /> for <paramref name='filled'/></remarks>
+        <remarks>This method is obsolete.  Use the overload which takes a <see cref="T:System.Boolean" /> for <paramref name="filled" /></remarks>
       </Docs>
     </Member>
     <Member MemberName="DrawRectangle">
