@@ -1401,5 +1401,32 @@
         <remarks>To be added</remarks>
       </Docs>
     </Member>
+    <Member MemberName="RenderThresholdAlpha">
+      <MemberSignature Language="C#" Value="public void RenderThresholdAlpha (Gdk.Bitmap bitmap, int src_x, int src_y, int dest_x, int dest_y, int alpha_threshold);" />
+      <MemberType>Method</MemberType>
+      <ReturnValue>
+        <ReturnType>System.Void</ReturnType>
+      </ReturnValue>
+      <Parameters>
+        <Parameter Name="bitmap" Type="Gdk.Bitmap" />
+        <Parameter Name="src_x" Type="System.Int32" />
+        <Parameter Name="src_y" Type="System.Int32" />
+        <Parameter Name="dest_x" Type="System.Int32" />
+        <Parameter Name="dest_y" Type="System.Int32" />
+        <Parameter Name="alpha_threshold" Type="System.Int32" />
+      </Parameters>
+      <Docs>
+        <summary>Render pixbuf alpha channel as a bi-level clip mask to a <see cref="T:Gdk.Bitmap" /></summary>
+        <param name="bitmap">The destination object of type 'Gdk.Bitmap'</param>
+        <param name="src_x">Source X coordinate.</param>
+        <param name="src_y">Source Y coordinate.</param>
+        <param name="dest_x">Destination X coordinate.
+</param>
+        <param name="dest_y">Destination Y coordinate.</param>
+        <param name="alpha_threshold">Value below this will be painted as zero; all other values will be painted as one.</param>
+        <remarks>This function is designed to threshold and render the alpha values from this <see cref="T:Gdk.Pixbuf" /> into the destination <see cref="T:Gdk.Bitmask" /> which can then be used as a clipping mask for a <see cref="T:Gdk.Drawable" />.</remarks>
+        <remarks>To be added</remarks>
+      </Docs>
+    </Member>
   </Members>
 </Type>
