@@ -191,3 +191,7 @@
 			return ret;
 		}
 
+		public void RenderThresholdAlpha (Bitmap bitmap, int src_x, int src_y, int dest_x, int dest_y, int alpha_threshold) 
+		{
+			RenderThresholdAlpha (bitmap, src_x, src_y, dest_x, dest_y, -1, -1, alpha_threshold);
+		}
