@@ -1,6 +1,7 @@
 2004-08-24  Mike Kestner  <mkestner@ximian.com>
 
 	* en/Gdk/Drawable.xml : add DrawPolygon overload and doc both.
+	* en/Gdk/Pixbuf.xml : add RenderThresholdAlpha overload docs.
 
 2004-08-22  Shane Landrum <epicene@pobox.com>
 
