@@ -1,3 +1,9 @@
+2004-08-24  Larry Ewing  <lewing@ximian.com>
+
+	* gdk/Pixbuf.custom : add RenderThresholdAlpha overload which defaults
+	to the entire pixbuf width/height.
+	[Fixes #60703]
+
 2004-08-24  Mike Kestner  <mkestner@ximian.com>
 
 	* gdk/Drawable.custom : add a DrawPolygon overload with bool filled
